# netskope-sdwan-py-sdk

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/: index.html
api/client/: index.html
api/config/: index.html
api/enums/: index.html
api/exceptions/: index.html
api/managers/: index.html
api/managers-gateways/: index.html
api/managers-resources/: index.html
api/models/: index.html
api/models-download/: index.html
api/models-gateway/: index.html
api/models-resource/: index.html
api/package/: index.html
api/pagination/: index.html
api/tenant-resolution/: index.html
api/transport/: index.html
api/v1/: index.html
authentication/: index.html
docs/: authentication.md  examples.md  getting-started.md  index.md  reference-values.md
docs/api/: client.md  config.md  enums.md  exceptions.md  gateway-manager.md  index.md  managers-gateways.md  managers-resources.md  managers.md  models-download.md  models-gateway.md  models-resource.md  models.md  package.md  pagination.md  sdwanclient.md  tenant-resolution.md  transport.md  v1.md
examples/: basic_gateway_telemetry.py  basic_gateways.py  basic_monitoring.py  index.html  pyproject.toml  smoke_all_gets.py
getting-started/: index.html
reference-values/: index.html
site/: index.html
site/api/client/: index.html
site/api/config/: index.html
site/api/enums/: index.html
site/api/exceptions/: index.html
site/api/managers/: index.html
site/api/managers-gateways/: index.html
site/api/managers-resources/: index.html
site/api/models/: index.html
site/api/models-gateway/: index.html
site/api/pagination/: index.html
site/authentication/: index.html
site/search/: search_index.json
src/netskope_sdwan_py_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/netskopesdwan/: __init__.py  client.py  config.py  enums.py  exceptions.py  pagination.py  tenant_resolution.py  transport.py  v1.py
src/netskopesdwan/managers/: __init__.py  base.py  gateways.py  resources.py
src/netskopesdwan/models/: __init__.py  download.py  gateway.py  resource.py
tests/: __init__.py  conftest.py  fixtures.py  test_client.py  test_gateways_manager.py  test_resource_managers.py  test_tenant_resolution.py  test_transport.py  test_v1_managers.py  test_v1_monitoring_system.py
