[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netskope-sdwan-py-sdk"
dynamic = ["version"]
description = "Read-only Python SDK for Netskope SD-WAN APIs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Open Source Contributors" },
]
keywords = ["netskope", "sd-wan", "sdk", "api", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.31,<3",
]

[project.urls]
Homepage = "https://github.com/virtualmo/netskope-sdwan-py-sdk"
Repository = "https://github.com/virtualmo/netskope-sdwan-py-sdk"
Issues = "https://github.com/virtualmo/netskope-sdwan-py-sdk"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8.0,<9",
  "ruff>=0.4,<1",
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  "mkdocstrings[python]>=0.26,<1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "netskopesdwan._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
