[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netskope-sdwan"
version = "0.1.0"
description = "Python SDK for Netskope SD-WAN API"
readme = "README.md"
authors = [
    { name = "Mo Elamin" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "requests>=2.31.0"
]

keywords = ["netskope", "sdwan", "api", "sdk"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/virtualmo/netskope-sdwan-py-sdk"
Repository = "https://github.com/virtualmo/netskope-sdwan-py-sdk"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]